@startuml component-architecture
title LifeOS — Component Architecture (v1 local + future cloud)

skinparam componentStyle rectangle
skinparam linetype ortho

package "iOS App" {
  package "Presentation" {
    [SwiftUI Views] as Views
    [ViewModels] as VMs
  }

  package "Domain" {
    [Domain Models\n(Medicine, Contact, Hobby, PrepItem, ...)] as Domain
  }

  package "Repository Protocols" {
    interface MedicineRepository
    interface ContactRepository
    interface HobbyRepository
    interface PrepItemRepository
  }

  package "Data Layer — v1 (built now)" {
    [SwiftDataMedicineRepository] as SDMed
    [SwiftDataContactRepository] as SDContact
    [SwiftDataHobbyRepository] as SDHobby
    [SwiftDataPrepItemRepository] as SDPrep
    database "SwiftData\n(on-device store)" as SwiftDataDB
  }

  package "Data Layer — future (not built yet)" #line.dashed {
    [SupabaseContactRepository] as SBContact
    [SyncEngine] as Sync
    [Outbox\n(pending mutations)] as Outbox
  }
}

package "Chrome Extension — future" #line.dashed {
  [Popup UI] as ExtUI
  [supabase-js client] as ExtClient
}

cloud "Supabase — future" #line.dashed {
  [Postgres + Row Level Security] as Postgres
  [Supabase Auth] as Auth
}

Views --> VMs
VMs --> Domain
VMs --> MedicineRepository
VMs --> ContactRepository
VMs --> HobbyRepository
VMs --> PrepItemRepository

MedicineRepository <|.. SDMed
ContactRepository <|.. SDContact
HobbyRepository <|.. SDHobby
PrepItemRepository <|.. SDPrep

SDMed --> SwiftDataDB
SDContact --> SwiftDataDB
SDHobby --> SwiftDataDB
SDPrep --> SwiftDataDB

ContactRepository <|.. SBContact : "future swap-in,\nsame protocol"
SBContact --> SwiftDataDB : reads (offline cache)
SBContact --> Outbox : writes (queued)
Outbox --> Sync
Sync --> Postgres : push / pull

ExtUI --> ExtClient
ExtClient --> Postgres : same tables,\nsame RLS
ExtClient --> Auth

Auth --> Postgres : "user_id = auth.uid()"

note right of "Data Layer — future (not built yet)"
  Nothing above this layer changes
  when this is added — Views, VMs,
  Domain models and the repository
  protocols stay exactly as they are.
end note

@enduml
